<resources>
    <string name="app_name">Jobstify</string>

    <string name="login">Login</string>
    <string name="login_desc">Login to your Account</string>
    <string name="register_desc">Please fill the input below here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="register_title_1">Create</string>
    <string name="register_title_2">Your Account</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="already_have_account">Have an account already?</string>
    <string name="new_user">New user?</string>
    <string name="create_account">Create an Account</string>
    <string name="log_out">Log Out</string>
    <string name="skip_intro">Skip</string>
    <string name="next_intro">Next</string>
    <string name="title_intro">Title Intro</string>
    <string name="title_intro_desc">Title Intro Desc</string>
    <string name="forgot_password_desc">Enter your registered email below to receive password reset instruction</string>
    <string name="remember_password">Remember password?</string>
    <string name="email_sent">Email has been sent!</string>
    <string name="email_sent_desc">Please check your inbox and click in the received link to reset a password</string>
    <string name="do_not_receive">Do not receive the link? </string>
    <string name="resend">Resend</string>
    <string name="send_email">Send</string>


    <string name="location">Location</string>
    <string name="title_gender">Gender</string>
    <string name="gender">Female</string>
    <string name="title_age">Age</string>
    <string name="age">56 Years</string>
    <string name="proficiency">Proficiency</string>
    <string name="title_about">About</string>
    <string name="about">About Me</string>
    <string name="ig">Instagram</string>
    <string name="wa">Whatsapp</string>
    <string name="line">ID Line</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_fill_data">Fill Your</string>
    <string name="title_fill_data2">Personal Data</string>



</resources>