<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".authentication.ResetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAppearance="@style/title_dark"
        android:fontFamily="@font/rubik_bold"
        android:layout_marginTop="40dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password_desc"
        android:textSize="16sp"
        android:letterSpacing="-0.03"
        android:textColor="#3C3A36"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/forgot_password"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/et_email_reset_pw"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textAppearance="@style/input_type"
        android:textColorHint="#707070"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text_email_forgot_password"
        android:fontFamily="@font/rubik_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:textSize="14sp"
            android:text="@string/remember_password"/>
        <TextView
            android:id="@+id/btn_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/rubik_bold"
            android:textSize="14sp"
            android:text="@string/login"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_reset_password_send_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/button_login_register"
        android:background="@drawable/custom_button_register_login"
        android:text="@string/send_email"
        android:fontFamily="@font/rubik_regular"/>


</LinearLayout>