<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple"
    android:padding="50dp"
    tools:context=".SignInActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title_1"
        android:textAppearance="@style/title"
        android:fontFamily="@font/rubik_bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title_2"
        android:textAppearance="@style/title"
        android:fontFamily="@font/rubik_bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="100dp"
        android:text="@string/register_desc"
        android:textAppearance="@style/title_desc"
        android:fontFamily="@font/rubik_regular"/>

    <EditText
        android:id="@+id/et_sign_up_full_name"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/full_name"
        android:textAppearance="@style/input_type"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/ic_full_name"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/rubik_regular"/>

    <EditText
        android:id="@+id/et_sign_up_email"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textAppearance="@style/input_type"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/rubik_regular"/>

    <EditText
        android:id="@+id/et_sign_up_password"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:textAppearance="@style/input_type"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/rubik_regular"/>

    <Button
        android:id="@+id/btn_sign_up_register"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/button_login_register"
        android:background="@drawable/custom_button_register_login"
        android:text="@string/register"
        android:fontFamily="@font/rubik_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/already_have_account"
            android:textAppearance="@style/title_plain"
            android:textSize="14sp"
            android:fontFamily="@font/rubik_regular" />
        <TextView
            android:id="@+id/btn_sign_up_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            android:textAppearance="@style/button_login_register"
            android:textSize="16sp"
            android:fontFamily="@font/rubik_bold" />

    </LinearLayout>

</LinearLayout>