<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android..com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple"
    tools:context=".authentication.SignInActivity">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/sign_in"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/login"
        android:textAppearance="@style/title"
        android:fontFamily="@font/rubik_bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_desc"
        android:textAppearance="@style/title_desc"
        android:fontFamily="@font/rubik_regular"/>



    <EditText
        android:id="@+id/et_sign_in_email"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textAppearance="@style/input_type"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text_register_login"
        android:fontFamily="@font/rubik_regular"/>

    <EditText
        android:id="@+id/et_sign_in_password"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:textAppearance="@style/input_type"
        android:textColorHint="@color/white"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text_register_login"
        android:fontFamily="@font/rubik_regular"/>

    <TextView
        android:id="@+id/btn_sign_in_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/forgot_password"
        android:textAlignment="textEnd"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/rubik_bold"/>
    
    <Button
        android:id="@+id/btn_sign_in_login"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/button_login_register"
        android:background="@drawable/custom_button_register_login"
        android:text="@string/login"
        android:fontFamily="@font/rubik_regular"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/new_user"
            android:textAppearance="@style/create_account"
            android:fontFamily="@font/rubik_regular"/>
        <TextView
            android:id="@+id/btn_sign_in_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textAppearance="@style/create_account"
            android:fontFamily="@font/rubik_bold"/>

    </LinearLayout>


</LinearLayout>