<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.ProfileFragment"
        android:padding="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="150dp"
            android:layout_gravity="center"
            android:src="@drawable/profile_image"
            android:contentDescription="@string/app_name" />

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="#EEF7FE"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/proficiency1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/proficiency"
                android:fontFamily="@font/gilroy_bold"
                android:textColor="@color/text_profile"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="26sp"
            android:text="@string/full_name"
            android:fontFamily="@font/gilroy_bold"
            android:textColor="@color/text_profile"/>

        <TextView
            android:id="@+id/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/location"
            android:fontFamily="@font/gilroy_bold"
            android:textColor="@color/text_profile"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#EEF7FE"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/AboutMe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:textSize="16sp"
                android:text="@string/about"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:fontFamily="@font/gilroy_bold"/>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/social_media_icons"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/text_profile"
                android:text="HIRE ME"
                android:fontFamily="@font/gilroy_bold"
                android:layout_marginEnd="10dp" />
            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="CONTACT ME"
                android:fontFamily="@font/gilroy_bold"
                android:backgroundTint="@color/text_profile" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_main_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="LogOut"/>
    </LinearLayout>
</ScrollView>
